--- a/movies.html
+++ b/movies.html
@@ -11,12 +11,12 @@
 
         gtag('config', 'G-26MNY5FFJJ');
     </script>
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-    <script src="/assets/js/font.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='https://movies.ch3n.cc/favicon.ico' />
+    <script src="https://movies.ch3n.cc/assets/js/font.js"></script>
     <meta name="google" content="notranslate" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/media.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/nav.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/media.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/nav.css" />
     <title>Top Movies</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Rednotsus" />
@@ -24,14 +24,14 @@
     <meta charset="utf-8">
     <meta name="description" content="Watch your favorite movies, tv shows, and anime for free on gms movies!" />
     </script>
-    <script src="/assets/js/media.js"></script>
-    <script src="/assets/js/movies.js"></script>
+    <script src="https://movies.ch3n.cc/assets/js/media.js"></script>
+    <script src="https://movies.ch3n.cc/assets/js/movies.js"></script>
 </head>
 
 <body>
     <nav>
         <div class="navbar">
-            <a id="nav-title" href="/"><img src="/img/logo.png" alt="GMSMovies Logo"></a>
+            <a id="nav-title" href="/"><img src="https://movies.ch3n.cc/img/logo.png" alt="GMSMovies Logo"></a>
             <a href="/movies"><i class="fa-solid fa-video">&nbsp;</i>Movies</a>
             <a href="/tv"><i class="fa-solid fa-tv">&nbsp;</i>TV Series</a>
 
@@ -51,7 +51,7 @@
     <br>
     <div class="attribution">
         Images and titles provided by
-        <a href="https://www.themoviedb.org/"><img src="/img/tmdb.svg" alt="TMDB Logo"
+        <a href="https://www.themoviedb.org/"><img src="https://movies.ch3n.cc//img/tmdb.svg" alt="TMDB Logo"
                 style="height: 20px; vertical-align: middle;"></a>
     </div>
 
