--- a/watch/tv.html
+++ b/watch/tv.html
@@ -11,13 +11,13 @@
 
         gtag('config', 'G-26MNY5FFJJ');
     </script>
-    <link rel='shortcut icon' type='image/x-icon' href='/favicon.ico' />
-    <script src="/assets/js/font.js"></script>
+    <link rel='shortcut icon' type='image/x-icon' href='https://movies.ch3n.cc/favicon.ico' />
+    <script src="https://movies.ch3n.cc/assets/js/font.js"></script>
     <meta name="google" content="notranslate" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/style.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/media.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/nav.css" />
-    <link rel="stylesheet" type="text/css" href="/assets/css/watch.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/style.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/media.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/nav.css" />
+    <link rel="stylesheet" type="text/css" href="https://movies.ch3n.cc/assets/css/watch.css" />
     <title>Watch TV Shows Free Online</title>
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="author" content="Rednotsus" />
@@ -25,13 +25,13 @@
     <meta charset="utf-8">
     <meta name="description" content="Watch your favorite movies, tv shows, and anime for free on gms movies!" />
     </script>
-    <script src="/assets/js/watchtv.js"></script>
+    <script src="https://movies.ch3n.cc/assets/js/watchtv.js"></script>
 </head>
 
 <body>
     <nav>
         <div class="navbar">
-            <a id="nav-title" href="/"><img src="/img/logo.png" alt="GMSMovies Logo"></a>
+            <a id="nav-title" href="/"><img src="https://movies.ch3n.cc/img/logo.png" alt="GMSMovies Logo"></a>
             <a href="/movies"><i class="fa-solid fa-video">&nbsp;</i>Movies</a>
             <a href="/tv"><i class="fa-solid fa-tv">&nbsp;</i>TV Series</a>
 
